--- a/consultation-osteopathie.html
+++ b/consultation-osteopathie.html
@@ -59,27 +59,29 @@
 <body>
 
   <header data-aos="fade-in" class="header mw-container">
+    <nav class="navbar">
     <div class="header__wrapper">
-      <nav class="navbar">
-      <a href="index.html">
-      <p class="header__name">Henrique Nunes</p>
-      <p class="header__wrapper__job">Ostéopathe à Bruges</p>
-    </a>
+        <a href="index.html">
+          <p class="header__name">Henrique Nunes</p>
+          <p class="header__wrapper__job">Ostéopathe à Bruges</p>
+        </a>
     </div>
-    <div class="navbar">
+    <div class="navbar__container">
       <div class="navbar__wrapper">
         <div class="navbar__menu">
-        <a class="navbar__link" href="index.html">Accueil</a>
-        <div class="dropdown">
-          <span class="navbar__link">Ostéopathie</span>
-          <div class="dropdown-content">
-            <div class="dropdown-content__wrapper">
-              <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-              <a class="dropdown-content__wrapper__link"
-              href="consultation-osteopathie.html">Consultation</a>
-              <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
-                consulter ?</a>
-                
+          <a class="navbar__link" href="index.html">Accueil</a>
+          <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
+          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie.html">Consultation</a>
+          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe.html">Quand
+            consulter ?</a>
+          <div class="dropdown">
+            <span class="navbar__link">Ostéopathie</span>
+            <div class="dropdown-content">
+              <div class="dropdown-content__wrapper">
+                <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
+                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie.html">Consultation</a>
+                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
+                  consulter ?</a>
               </div>
             </div>
           </div>
@@ -87,16 +89,17 @@
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
-        <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
-        <button class="menu"><img class="menu__img" src="./assets/images/menu.png" alt="Icone Menu"></button>
-        <button class="menu-close test"><img class="menu__img" src="./assets/images/close.png" alt="Icone Menu"></button>
-      </div>
+      <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+        aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
+      <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
+      <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"></button>
+    </div>
     </nav>
   </header>
   <main class="">
     <section class="banner banner-intro">
-      <img class="banner__img" src="./assets/images/banner-osteo.jpg" alt="séance osteopathie" loading="lazy">
-      <div class="banner__wrapper">
+      <img class="banner__img" src="./assets/images/banner-osteo.webp" alt="séance osteopathie" loading="lazy">
+      <div class="banner__wrapper banner__wrapper--intro">
        <h1 class="banner__title">Consultation d'Ostéopathie</h1>
       </div>
     </section>
@@ -142,7 +145,7 @@
     
 
     <section class="banner">
-      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.jpg" alt="séance osteopathie" loading="lazy">
+      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" alt="séance osteopathie" loading="lazy">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <a class="btn btn-light btn-xl" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
