--- a/osteopathe.html
+++ b/osteopathe.html
@@ -59,27 +59,29 @@
 <body>
 
   <header data-aos="fade-in" class="header mw-container">
+    <nav class="navbar">
     <div class="header__wrapper">
-      <nav class="navbar">
-      <a href="index.html">
-      <p class="header__name">Henrique Nunes</p>
-      <p class="header__wrapper__job">Ostéopathe à Bruges</p>
-    </a>
+        <a href="index.html">
+          <p class="header__name">Henrique Nunes</p>
+          <p class="header__wrapper__job">Ostéopathe à Bruges</p>
+        </a>
     </div>
-    <div class="navbar">
+    <div class="navbar__container">
       <div class="navbar__wrapper">
         <div class="navbar__menu">
-        <a class="navbar__link" href="index.html">Accueil</a>
-        <div class="dropdown">
-          <span class="navbar__link">Ostéopathie</span>
-          <div class="dropdown-content">
-            <div class="dropdown-content__wrapper">
-              <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-              <a class="dropdown-content__wrapper__link"
-              href="consultation-osteopathie.html">Consultation</a>
-              <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
-                consulter ?</a>
-                
+          <a class="navbar__link" href="index.html">Accueil</a>
+          <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
+          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie.html">Consultation</a>
+          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe.html">Quand
+            consulter ?</a>
+          <div class="dropdown">
+            <span class="navbar__link">Ostéopathie</span>
+            <div class="dropdown-content">
+              <div class="dropdown-content__wrapper">
+                <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
+                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie.html">Consultation</a>
+                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
+                  consulter ?</a>
               </div>
             </div>
           </div>
@@ -87,17 +89,18 @@
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
-        <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
-        <button class="menu"><img class="menu__img" src="./assets/images/menu.png" alt="Icone Menu"></button>
-        <button class="menu-close test"><img class="menu__img" src="./assets/images/close.png" alt="Icone Menu"></button>
-      </div>
+      <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+        aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
+      <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
+      <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"></button>
+    </div>
     </nav>
   </header>
   <main class="">
 
     <section data-aos="fade-in" class="banner banner-intro">
-      <img class="banner__img" loading="lazy" src="./assets/images/bannerTeam.jpg" alt="séance ostéopathie">
-      <div class="banner__wrapper">
+      <img class="banner__img" loading="lazy" src="./assets/images/bannerTeam.webp" alt="séance ostéopathie">
+      <div class="banner__wrapper banner__wrapper--intro">
         <h1 class="banner__title">Votre Ostéopathe</h1>
       </div>
     </section>
@@ -113,11 +116,11 @@
   
           <article class="article__wrapper">
             <h2 class="article__wrapper__title">Parcours Professionnel</h2>
-            <p class="article__wrapper__text">Diplômé en <strong>ostéopathie</strong>, j'ai acquis plus de <strong>15 ans d'expérience</strong> en travaillant avec divers publics, y compris des <strong>athlètes de haut niveau</strong>, des <strong>enfants</strong>, des <strong>adultes</strong> et des <strong>seniors</strong>. J’ai également travaillé avec divers <strong>clubs sportifs de haut niveau</strong> (Tremblay-en-France Handball, MLV Basket, Torcy Football, INSEP, JSA Bordeaux, CDHN) et assuré des consultations en <strong>cabinet</strong> ainsi qu’à <strong>domicile</strong>. Mon parcours inclut aussi de la formation en <strong>entreprise</strong> sur la <strong>prévention des troubles</strong> liés à l'inactivité physique avec <strong>Atid Consulting</strong>, enrichissant ainsi mon approche clinique.</p>
-            <p class="article__wrapper__text">En tant qu'enseignant chez <strong>Eurosteo</strong> (École d'ostéopathie pour professionnels de santé), je suis l'évolution et l'actualité en <strong>traumatologie du sport</strong> et en <strong>prévention des blessures</strong>.</p>
+            <p class="article__wrapper__text">Diplômé en <strong>ostéopathie</strong>, j'ai acquis plus de <strong>15 ans d'expérience</strong> en travaillant avec divers publics, y compris des <strong>athlètes de haut niveau</strong>, des <strong>enfants</strong>, des <strong>adultes</strong> et des <strong>seniors</strong>. J’ai également travaillé avec divers <strong>clubs sportifs de haut niveau</strong> (<a class="link-ext" href="https://tremblayhandball.com/">Tremblay-en-France Handball</a>, <a class="link-ext" href="https://www.facebook.com/p/Marne-La-Vall%C3%A9e-Basket-Val-Maubu%C3%A9e-61553830123844/?locale=fr_FR">MLV Basket</a>, <a class="link-ext" href="https://torcyfoot.footeo.com/">Torcy Football</a>, <a class="link-ext" href="https://www.insep.fr/fr">INSEP</a>, <a class="link-ext" href="https://www.jsa-bmb.fr/">JSA Bordeaux</a>, <a class="link-ext" href="https://www.cdhn.fr/">CDHN</a>) et assuré des consultations en <strong>cabinet</strong> ainsi qu’à <strong>domicile</strong>. Mon parcours inclut aussi de la formation en <strong>entreprise</strong> sur la <strong>prévention des troubles</strong> liés à l'inactivité physique avec <a class="link-ext" href="https://www.atid-consulting.com/">Atid Consulting</a>, enrichissant ainsi mon approche clinique.</p>
+            <p class="article__wrapper__text">En tant qu'enseignant chez <a class="link-ext" href="https://www.eurosteo.com/">Eurosteo</a> (École d'ostéopathie pour professionnels de santé), je suis l'évolution et l'actualité en <strong>traumatologie du sport</strong> et en <strong>prévention des blessures</strong>.</p>
           </article>
         </div>
-        <img class="article__wrapper__img" loading="lazy" src="./assets/images/osteo1.jpg" alt="ostéopathe Henrique Nunes" >
+        <img class="article__wrapper__img" loading="lazy" src="./assets/images/osteo1.webp" alt="ostéopathe Henrique Nunes" >
       </div>
   
       <article class="article__wrapper">
@@ -154,13 +157,13 @@
   
       <article class="article__wrapper">
         <h2 class="article__wrapper__title">Collaboration avec des Clubs Sportifs</h2>
-        <img src="./assets/images/clubs.png" loading="lazy" alt="Photo des clubs" >
+        <img src="./assets/images/clubs.webp" loading="lazy" alt="Photo des clubs" >
       </article>
   
     </div>
   
     <section class="banner">
-      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.jpg" loading="lazy" alt="Séance d'ostéopathie">
+      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy" alt="Séance d'ostéopathie">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <a class="btn btn-light btn-xl" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
