--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div>
 
           <div class="advice__card__avatar">
-            <img class="advice__card__avatar__img" src="/assets/images/avatar-clement.png"
+            <img class="advice__card__avatar__img" src="./assets/images/avatar-clement.png"
               alt="Avis Google utilisateur">
             <p>Clément Jeandet</p>
           </div>
@@ -299,29 +299,29 @@
             rapidement, suffisamment de mobilité et de confiance dans mes capacités avec l'aide d'Henrique...”</p>
         </div>
         <div class="advice__card__bottom">
-          <img class="advice__card__bottom__stars" loading="lazy" src="././assets/images/etoiles-avis-patients.png"
+          <img class="advice__card__bottom__stars" loading="lazy" src="./assets/images/etoiles-avis-patients.png"
             alt="Étoiles d'avis des patients">
           <a href="https://www.google.com/search?q=Henrique+NUNES+ost%C3%A9opathe&rlz=1C5CHFA_enFR1138FR1138&oq=Henrique+NUNES+ost%C3%A9opathe&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQABgWGB4yCggCEAAYgAQYogQyCggDEAAYgAQYogQyCggEEAAYgAQYogQyBggFEEUYPTIGCAYQRRg9MgYIBxBFGD3SAQc2NzJqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8&zx=1733064567348&no_sw_cr=1"
             class="advice__card__bottom__link">
-            <img class="advice__card__bottom__google" loading="lazy" src="././assets/images/icône-google.png"
+            <img class="advice__card__bottom__google" loading="lazy" src="./assets/images/icône-google.png"
               alt="Icône Google">
           </a>
         </div>
       </div>
       <div class="advice__card">
         <div class="advice__card__avatar">
-          <img class="advice__card__avatar__img" src="/assets/images/avatar-julie.webp" alt="Avis Google utilisateur">
+          <img class="advice__card__avatar__img" src="./assets/images/avatar-julie.webp" alt="Avis Google utilisateur">
           <p>Julie R</p>
         </div>
         <p class="advice__card__avatar__desc">“Excellent ostéopathe, qui prend bien le temps. Henrique n'hésite pas à
           renvoyer vers d'autres professionnels de santé de confiance si besoin, afin d'avoir une prise en charge
           globale, permettant d'améliorer sa santé de manière générale.”</p>
         <div class="advice__card__bottom">
-          <img class="advice__card__bottom__stars" loading="lazy" src="././assets/images/etoiles-avis-patients.svg"
+          <img class="advice__card__bottom__stars" loading="lazy" src="./assets/images/etoiles-avis-patients.svg"
             alt="Étoiles d'avis des patients">
           <a href="https://www.google.com/search?q=Henrique+NUNES+ost%C3%A9opathe&rlz=1C5CHFA_enFR1138FR1138&oq=Henrique+NUNES+ost%C3%A9opathe&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQABgWGB4yCggCEAAYgAQYogQyCggDEAAYgAQYogQyCggEEAAYgAQYogQyBggFEEUYPTIGCAYQRRg9MgYIBxBFGD3SAQc2NzJqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8&zx=1733064567348&no_sw_cr=1"
             class="advice__card__bottom__link">
-            <img class="advice__card__bottom__google" loading="lazy" src="././assets/images/icône-google.svg"
+            <img class="advice__card__bottom__google" loading="lazy" src="./assets/images/icône-google.svg"
               alt="Icône Google">
           </a>
         </div>
