--- a/consultation-osteopathie.html
+++ b/consultation-osteopathie.html
@@ -100,7 +100,7 @@
     <section class="banner banner-intro">
       <img class="banner__img" src="./assets/images/banner-osteo.webp" alt="séance osteopathie" loading="lazy">
       <div class="banner__wrapper banner__wrapper--intro">
-       <h1 class="banner__title">Consultation d'Ostéopathie</h1>
+       <h1 class="banner__title banner__title--intro">Consultation d'Ostéopathie</h1>
       </div>
     </section>
     <div class="mw-container article">
