--- a/osteopathie.html
+++ b/osteopathie.html
@@ -100,7 +100,7 @@
     <section class="banner banner-intro">
       <img class="banner__img" src="./assets/images/bannerosteo.webp" loading="lazy" alt="séance osteopathie">
       <div class="banner__wrapper banner__wrapper--intro">
-       <h1 class="banner__title">L’ostéopathie </h1>
+       <h1 class="banner__title banner__title--intro">L’ostéopathie </h1>
       </div>
     </section>
     <div class="mw-container article">
