--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -101,7 +101,7 @@
     <section data-aos="fade-in" class="banner banner-intro">
       <img class="banner__img" src="./assets/images/bannerwhen.webp" loading="lazy" alt="séance osteopathie">
       <div class="banner__wrapper banner__wrapper--intro">
-        <h1 class="banner__title">Quand Consulter un Ostéopathe ?</h1>
+        <h1 class="banner__title banner__title--intro">Quand Consulter un Ostéopathe ?</h1>
       </div>
     </section>
     <!-- <nav class="section-nav">
