--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy"
         alt="Séance d'ostéopathie">
       <div class="banner__wrapper">
-        <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
+        <h3 class="banner__title banner__title--intro">Faites le premier pas vers un corps en pleine forme.</h3>
         <a class="btn btn-light btn-xl" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
           aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </div>
