--- a/osteopathe.html
+++ b/osteopathe.html
@@ -101,7 +101,7 @@
     <section data-aos="fade-in" class="banner banner-intro">
       <img class="banner__img" loading="lazy" src="./assets/images/bannerTeam.webp" alt="séance ostéopathie">
       <div class="banner__wrapper banner__wrapper--intro">
-        <h1 class="banner__title">Votre Ostéopathe</h1>
+        <h1 class="banner__title banner__title--intro">Votre Ostéopathe</h1>
       </div>
     </section>
   
