--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -450,7 +450,7 @@
                 <strong>sportive</strong>.</p>
             </article>
           </div>
-          <img class="article__wrapper__img" src="/assets/images/osteopathie-sportifs.webp" loading="lazy" alt="photo sportifs">
+          <img class="article__wrapper__img" src="./assets/images/osteopathie-sportifs.webp" loading="lazy" alt="photo sportifs">
         </div>
       </article>
       <article data-aos="fade-in" id="teams" class="article__wrapper">
